# intistelecom-rs

./: Cargo.toml  README.md
examples/: message.rs  originator.rs  routing.rs  template.rs  user.rs
src/: client.rs  lib.rs  message.rs  model.rs  originator.rs  routing.rs  template.rs  tests.rs  user.rs
src/model/: message.rs  originator.rs  routing.rs  template.rs  user.rs
