[package]
name = "intistelecom-rs"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pixel365/intistelecom-rs"
keywords = ["sms", "intistelecom"]
publish = true
description = "With the intistele.com, you can access and organise SMS mailouts from your own software via API"
categories = ["no-std"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version="1.0" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features=["blocking", "json"] }
base64 = "0.21"
chrono = { version="0.4", features=["clock"] }
